--- a/content/post/first-steps/pubdir/index.Rmd
+++ b/content/post/first-steps/pubdir/index.Rmd
@@ -30,8 +30,8 @@ library(bit64)
 
 In this post we will learn about the basic *syntax* of R.
 The syntax basically refers to the grammatical rules you must adhere to when 
-communicating with your computer in the language `R`: if you you do not follow 
-the right syntax, i.e. you 'speak' gramatically incorrect, your computer will 
+communicating with your computer in the language `R`: if you do not follow 
+the right syntax, i.e. you 'speak' grammatically incorrect, your computer will 
 not understand you and communicate this to you by throwing up an error message.
 
 To learn about these important basics, the post follows the following structure:
@@ -43,29 +43,45 @@ To learn about these important basics, the post follows the following structure:
 # Issue commands to your computer
 
 There are two ways we can communicate with our computer in 
-R Studio: either issuing commands directly via the *console*, or by executing a script.
+R Studio: either issuing commands directly via the *console*, 
+or by executing a script.^[If you do not know what the console is, you 
+should have a look at the lecture slides from the [Material section](/material/)
+again.]
 
-Lets start by using the console and use R as a simple calculator first: we first want to add the numbers `2`and `5`.
+Lets start by using the console and use `R` as a simple calculator first: 
+we first want to add the numbers `2`and `5`.
 To this end, simply type `2 + 5` into the console and press `Enter`. 
-Since the expression `2 + 5` is syntactically correct R code, the 
+Since the expression `2 + 5` is syntactically correct `R` code, the 
 computer 'understands' what we want from it and returns the result:
 
 ```{r}
 2 + 5
 ```
 
-The `#>` at the beginning of the line indicates that what is written on this line is the output of an R command (but the concrete sign might be different on your computer). 
+The `#>` at the beginning of the line indicates that what is written on this 
+line is the output of an R command (but the concrete sign might be different 
+on your computer). 
 
-The result of `2+5` is a number (more precisely: a 'scalar'). 
-In R, scalars are always represented as a *vector* of length 1.
-The `[1]` here indicates that the first element on this line is the first element of the vector.
+The result of `2 + 5` is a number (more precisely: a 'scalar'). 
+In `R`, scalars are always represented as a *vector* of length 1.
+The `[1]` here indicates that the first element on this line is the first 
+element of the vector. In the present case, the first element is the only 
+element of the vector, since it contains only one element (which is what a 
+scalar is in the first place in `R`: a vector with one element).
 If the result of our calculation was a very long vector that
-needs to span several lines, at the beginning of the next line R would show us the index of the first number displayed on this line.^[You may try this out by typing `1:100` into your console and see what happens: this returns a vector of length 100, which certainly will contain some line breaks.]
+needs to span several lines, at the beginning of the next line R would show us 
+the index of the first number displayed on this line.^[You may try this out by 
+  typing `1:100` into your console and see what happens: this returns a vector 
+  of length 100, which certainly will contain some line breaks.]
 
-In this way we can use R as a simple calculator,
-because for all simple mathematical operations we can use certain symbols as operators.
-At this point it should be pointed out that the symbol `#` in R introduces a *comment*, that means everything in a line after `#` will be ignored by the computer and
-you can make notes in the code that only help *you* (or other humans) to understand what you have written.
+In this way we can use R as a simple calculator: 
+all basic mathematical operations have their own symbol as operator, i.e. a 
+signal token that tells the computer to implement a certain computation.
+
+At this point it should be pointed out that the symbol `#` in R introduces 
+a *comment*, that means everything in a line after `#` will be ignored by the 
+computer and you can make notes in the code that only help *you* 
+(or other humans) to understand what you have written.
 
 ```{r}
 2 + 5 # Addition
@@ -83,15 +99,22 @@ you can make notes in the code that only help *you* (or other humans) to underst
 3**2 # Exponentiation
 ```
 
-As an alternative to typing the commands into the console and then press `Enter`
-to execute them, we can write down the commands in a script, and then execute 
-this script.
-While the interaction via the console is useful to test the effects of certain 
-commands, scripts are useful if we want to develop more complex operations, and
-save what you have written for later, or to make them accessible to other people:
-we can save scripts as a file on our computer, and then use them later. 
+Comments are usually not very useful whenever you use the console to execute 
+`R` code, but they come in handy when you are writing *scripts*:
+an alternative to typing the commands into the console and then press `Enter`
+to execute them, is to write down the commands in a script, and then to execute 
+this script.^[Again, the use of scripts has been explained in the lecture, so
+have a look at the slides (or the R-Studio cheat sheet) in the 
+[Material section](/material/).
+]
 
-The operations that we have conducted so far and not particularly exciting, to
+While the interaction via the console is useful to test the effects of certain 
+commands, scripts are useful whenever we want to develop more complex operations, and
+save what you have written for later, or to make them accessible to other people:
+we can save scripts as a file on our computer, and then use them any time in 
+the future.
+
+The operations that we have conducted so far are not particularly exciting, to
 be honest. Before we proceed with more complex operations, however, we need to
 understand the ideas of `objects`, `functions`, and `assignments`.
 
@@ -110,7 +133,7 @@ For instance, in the computation
 and the addition-function, which we call via the operator `+`.
 
 The statement 'Everything that happens is a function call.' means that whenever
-we tell our computer to do something via R, we are effectively calling a 
+we tell our computer to do something via `R`, we are effectively calling a 
 *function*.
 
 **Functions** are algorithms that apply certain routines to an *input* and 
@@ -118,10 +141,10 @@ produce an *output*.
 The addition function we called in the calculation `2 + 3` took as input the 
 two numbers `2` and `3`, applied to them the addition routine and produced the 
 number `5` as output.
-The output `5` is an object in R just like the inputs `2` and `3`, 
+The output `5` is an object in `R` just like the inputs `2` and `3`, 
 as well as the addition function.
 
-A 'problem' is that in the present case R prints the output of the calculation 
+A 'problem' is that in the present case `R` prints the output of the calculation 
 but we have no access to it afterwards:
 
 ```{r}
@@ -129,7 +152,7 @@ but we have no access to it afterwards:
 ```
 
 It is stored, for some time, on the physical memory of our computer, but we
-basically have no way to find it. To address this problem we can issue an 
+basically have no idea where way to find it. To address this problem we can issue an 
 *assignment*: whenever we want to keep using the output of an operation, we may
 give the output a *name*. This name works effectively as a kind of pointer, 
 which points to the place on the computer memory where the output is saved.
@@ -153,7 +176,7 @@ intermediate_result
 
 Since making assignments happens so frequently in practice, there is a shortcut
 to the use of the function `assign`, namely the operator `<-`.
-Thus, the following two commands to effectively the same thing:
+Thus, the following two commands do effectively the same thing:
 
 ```{r}
 assign("intermediate_result", 2 + 3)
@@ -170,15 +193,15 @@ However, the code that results from such practice is usually much more difficult
 to read, so it is common practice to use `<-` rather than `->`.] 
 
 > **Digression: why `<-`?** 
-The use of the string `<-` as an assignment operator is at first sight 
+The use of the string `<-` as an assignment operator is, at first sight, 
 unintuitive, uncomfortable, and rather unique in the world of programming languages. 
 Much more common is the use of `=`. Where does this particularity of R come from? 
 Besides practical reasons -- in contrast to `=`, the use of `<-` makes explicit
 the unidirectionality of an assignment -- the main reason is historical: 
 `R` originated from the programming language `S`. This in turn has taken over 
-the `<-` from the language `APL`. And APL, in turn, was developed on a keyboard 
-layout, where `<-` had its own key. Moreoever, since the operator `==` was not 
-commonly used at that time, `=` was already assigned as test for equality 
+the `<-` from the language `APL`. And `APL`, in turn, was developed on a keyboard 
+layout, where `<-` had its own key. Moreoever, the operator `==` was not 
+commonly used at that time and `=` was already used to test for equality 
 (which, today, is basically always done by using `==`).
 And so one has decided to use `<-` as an assignment operator and while since 
 2001 you can also make assignments in R using `=`, `<-` remains strictly 
@@ -191,7 +214,7 @@ correct names in R...
 * do not start with `.` or a number 
 
 Moreover, there are some reserved words that you must not (and cannot) use as
-names, e.g. `function`, `TRUE`, of `if`. You can have a look at the complete
+names, e.g. `function`, `TRUE`, or `if`. You can have a look at the complete
 list of forbidden words by calling `?Reserved`.
 
 There is, however, nothing to remember since whenever you try to give an object
@@ -209,7 +232,7 @@ you should adhere to whenever possible:
 * You should **never use special characters**, especially *Umlaute*
 * R is *case sensitive*, meaning that `mean_value` is a different name than `Mean_Value`
 * Even if this is possible you should never use names that are already used for
-function provided by R. For instance, an assignment such as `assign <- 2` 
+functions provided by R. For instance, an assignment such as `assign <- 2` 
 is possible, but it effectively prevents you from using the function `assign` 
 without further complications.
 
@@ -248,7 +271,7 @@ x
 ```
 
 You can remove all assignment by clicking
-on the broom in the upper right environment panel in R-Studio or
+on the broom in the upper right environment panel in `R`-Studio or
 by calling the following command:
 
 ```{r, eval=FALSE}
@@ -257,39 +280,41 @@ rm(list=ls())
 
 # R packages
 
-Packages are a combination of R code, data, documentation and tests.
+Packages are a combination of `R` code, data, documentation and tests.
 They are the best way to create reproducible code and make it available
 to others.The fact that many people solve problems by developing 
 routines, then generalizing them and making them freely available to the whole
-R community is one of the main reasons for success and wide applicability of R.
+`R` community is one of the main reasons for the success and wide applicability 
+of `R`.
 
 While packages are often made available to the public, e.g. via GitHub
 or CRAN, it is equally useful to write packages for private use, 
 e.g. to write functions implementing certain routines that you use frequently
-across different projects, document them, and make them available too use 
-in different projects.^ [[Wickham and Bryan (2022)](https://r-pkgs.org/)
+across different projects, document them, and make them available to use 
+in different projects.^[[Wickham and Bryan (2022)](https://r-pkgs.org/)
 provide an excellent introduction to the development of R packages].
 
-When one starts R on our computer we have access to a certain number of functions,
-predefined variables and data sets. The totality of these objects is
-usually called `base R`, because we can use all the functionalities easily
+When one starts `R` on our computer we have access to a certain number of functions,
+predefined variables, and data sets. The totality of these objects is
+usually called `base R`, because we can use all the functionalities
 immediately after installing R on our computer.
 
-The function `assign`, for example, is part of `base R`: we start R and 
+The function `assign`, for instance, is part of `base R`: we start R and 
 can use it without further ado.
 Other functions, such as `Gini()` are not part of `base R`: they were written
 by someone else, and before using them we need to install the package
-that contains the function definition on our computer.
+that contains the function definition on our computer. The function `Gini()`,
+for instance, belongs to the package `ineq`.
 
-To use a package in R, it must first be installed.
-For packages that are available on the central R package platform CRAN,
-this is done with the function `install.packages()`.^[PAckages not released
-on this platform can also be installed directly from repository they were
+To use a package in `R`, it must first be installed.
+For packages that are available on the central `R` package platform CRAN,
+this is done with the function `install.packages()`.^[Packages not released
+on this platform can also be installed directly from the repository they were
 published, e.g. Github. To this end, the package `remotes` must be installed
 first, then you can use functions such as `install_github()`. 
 A short manual is provided [here](https://github.com/r-lib/remotes).] 
-For example, if we want to install the package `ineq` this is done with the
-following command: 
+For example, if we want to install the package `ineq` (which contains the 
+function `Gini()`) this is done with the following command: 
 
 ```{r, eval=FALSE}
 install.packages("ineq")
@@ -313,8 +338,8 @@ Here we write the name of the package, directly followed by `::` and then
 the name of the object that we want to use. In this example we want to use
 the function `Gini()`, which computes the Gini index.
 
-If we ommited the `::`, R would not look into the package `ineq` and, therefore,
-was not able to find the function, returning an error:
+If we ommited the `::`, `R` did not look into the package `ineq` and, therefore,
+would not able to find the function, returning an error:
 
 ```{r, error=TRUE}
 y <- Gini(x)
@@ -334,8 +359,8 @@ y <- Gini(x)
 This process is called *attaching a package*.
 For the sake of clarity, you should always add a call of `library()` for 
 all packages used within a script *at the very top of the script*. 
-This way you can see immediately which packages have to be installed for the
-script to work.
+This way you can see immediately which packages must be installed such that the
+script works.
 
 In principle, only the packages that are actually used should be read into 
 each script with `library()`. 
@@ -346,7 +371,7 @@ many packages have to be installed unnecessarily.
 
 Since packages are produced decentrally by a wide variety of people, there is a
 danger that objects in different packages get the same name.
-Since in R a name can only belong to one object, names may be overwritten or 
+Since in `R` a name can only point to one object, names may be overwritten or 
 'masked' when loading many packages. 
 While R informs you about this happening when you attach a package, it is easily 
 forgotten and can result in very cryptic error messages. 
@@ -379,7 +404,7 @@ dplyr::lead
 
 This can be very confusing. Thus, I *strongly recommend* to *always* use `::` 
 when it comes to masking, no matter whether it is stricly necessary or not.
-In this case, always use `plm::lead` and `dplyr::lead`, even it it is not 
+In this case, always use `plm::lead` and `dplyr::lead`, even if it was not 
 required in the first case. Otherwise, your code becomes very difficult to 
 understand and breaks completely once you change the sequence of the library 
 calls in the beginning.
@@ -418,8 +443,8 @@ assignments:
 console and press `Enter`, or (b) write the code into a script and then execute 
 it
 * Everything that *exists* in R is an *object*, everything that *happens* is a
-function call
-* A function is an object, that takes an input, applies a certain routine, and
+*function* call
+* A function is an object that takes an input, applies a certain routine, and
 returns an output
 * We can assign an object a name by using `<-`. Then we can call this object by
 typing its name. The process of giving a name to an object is called *assignment*,
