--- a/content/post/obj-types-iii-adv/pubdir/index.Rmd
+++ b/content/post/obj-types-iii-adv/pubdir/index.Rmd
@@ -22,11 +22,12 @@ output:
 
 # Optional background info: attributes and classes
 
-In the previous post you learned about the most important fundamental data types in R.
+In the previous posts you learned about the most important fundamental data 
+types in `R`.
 The types we will learn about below and not less important, but less fundamental.
 This means they are built by taking one of the base types we encountered before,
 and 'adding some features'. These features change the behavior of the type, 
-e.g. how it is printed or how it is affected by certain function calls, but
+e.g.m how it is printed or how it is affected by certain function calls, but
 also what kind of operations it allows.^[In fact, some new types allow you to
 do *less* than the original type, i.e. here the new features are restrictions. 
 The `tibble` we will encounter below is such an example.]
@@ -45,10 +46,13 @@ To retrieve attributes use `attributes()`:
 ```{r}
 attributes(x)
 ```
+
 Sometimes, adding attributes of a particular name have more relevant 
 implications. 
-One useful way to use attributes, for instance, is to name the single elements of vectors,
-something that changes the way the objects are printed and something that we already discussed in the context of lists:
+One useful way to use attributes, for instance, is to name the single elements 
+of vectors,
+something that changes the way the objects are printed and something that we 
+already discussed in the context of lists:
 
 ```{r}
 y <- c(1, 2, 3)
@@ -60,7 +64,13 @@ y
 attributes(y)
 ```
 
-But things become really interesting if you add an attribute called `class` since
+Now we can call elements by their name:
+
+```{r}
+y["Second"]
+```
+
+But things become really interesting if you add an attribute called `class`:
 this really transforms the data types into a new, less fundamental type. In 
 fact, this is how the types we discuss below, are created: smart people added,
 among other things, a class attribute to a more fundamental data type 
@@ -68,13 +78,13 @@ among other things, a class attribute to a more fundamental data type
 The art of writing new classes is part of
 [object oriented programming](https://adv-r.hadley.nz/oo.html), an advanced concept 
 that we do not cover in this course (and, to be honest, one of the areas 
-where R is not particularly well designed).
+where `R` is not particularly well designed).
 
 One implication of this 'less fundamental' nature of the objects we encounter
 below is that `typeof()` usually returns the base type. For instance, below
 we will learn about the `factor`, a type that is built upon `integer`.
 If we call `typeof()` on a `factor`, it will return the fundamental type,
-i.e. `factor`:
+i.e. `integer`:
 
 ```{r}
 xx <- factor(c(1,2))
@@ -95,7 +105,7 @@ out about its class:
 attributes(xx)
 ```
 
-All this can be confusing at first, so it is important to keep this in mind. Once 
+All this can be confusing at first, so it is important to keep it in mind. Once 
 you wrapped your head upon this, many confusing behaviors suddenly start to make
 sense, e.g. that mutating factors within a `data.frame` can result in whole 
 numbers, a phenomenon we will discuss in the context of data wrangling later.
@@ -175,7 +185,7 @@ x[1] + x[2]
 ```
 
 At the same time, there are some useful things we can do with factors.
-For instance, the function table gives us the absolute frequencies of the 
+For instance, the function `table()` gives us the absolute frequencies of the 
 factor elements, a task that is very common for categorical data:
 
 ```{r}
@@ -185,7 +195,7 @@ table(x)
 # Data Frames
 
 The `data.frame` is a special type of list. It is among the most widespread
-data types used in data analysis.
+data types used in data science.
 In contrast to a normal list, all elements of a `data.frame` must have the same 
 length.
 This means that you can think of a `data.frame` as a list arranged as a 
@@ -291,48 +301,48 @@ names(df_4)
 > **Hint:** For large `data.frame`s it can be useful to wrap `names()` into `sort()`, which
 sorts the resulting vector in alphabetical order.
 
-Head only prints the first `n` rows of a `data.frame`. By default `n=5`, but
-you can set it explicitly:
+To print the first `n` rows of a `data.frame` use `head()`. 
+By default `n=5`, but you can set it explicitly:
 
 ```{r}
 head(df_4, n = 2)
 ```
 
-The package `dplyr` proves the useful function `dplyr::glimpse()`, which 
+The package `dplyr` provides the useful function `dplyr::glimpse()`, which 
 gives a general overview about all columns and their types:
 
 ```{r, eval=FALSE}
 dplyr::glimpse(df_4)
 ```
 
-Finally, if you work within R Studio, you can use `View()` to get a Excel-like
+Finally, if you work within R-Studio, you can use `View()` to get a Excel-like
 representation of your data.
 
 As you might have guessed by now, `data.frame`s are the classic object to 
 represent read-in data.
 If, for instance, you download data on GDP in Germany from the Internet and then
-import this data into R, it usually gets represented as a `data.frame`.
+import this data into `R`, it usually gets represented as a `data.frame`.
 This representation then allows direct analysis and manipulation of the data.
 
 At the same time, `data.frame`s are a very old object type, the behavior of
 which sometimes feels a bit outdated. Because of this, some authors created 
 a new data type, which is built upon the `data.frame`, but behaves slightly
 different: the `tibble`. The tibble is made available via the package `tibble`,
-so to use tibbles, this packages has to be loaded first.
+so to use tibbles, this packages has to be installed first.
 
 You can read more about tibbles in chapter 10 of 
 [R for Data Science](https://r4ds.had.co.nz/index.html), i.e. [here](https://r4ds.had.co.nz/tibbles.html) (to avoid confusion: in his book
 Hadley always attaches the package `tidyverse` at the beginning of the chapter.
 This includes attaching the package `tibble`.)
 
-> **Digression: Dialects of R** As with natural language, programming languages
+> **Digression: Dialects of R** As with natural languages, programming languages
 feature different dialects, i.e. different ways of doing the same actions. In
-R this becomes particularly obvious in the context of dealing with data. Here,
+`R` this becomes particularly obvious in the context of dealing with data. Here,
 the different dialects show themselfes in different object types used for the
 data you are working with. To the best of my knowedge, there are three main
 dialects, each associated with a different focus on data representation.
 The *base* dialect represents data as `data.frame`s and it is the original 
-approach envisioned by the R developers. The *tidyverse* dialect
+approach envisioned by the `R` developers. The *tidyverse* dialect
 represents data as `tibble`s and is built around a number of different packages
 summarized under the name [tidyverse](https://www.tidyverse.org/). It is aimed
 to develop an set of packages that allow you to do all tasks commonly associated
@@ -347,7 +357,7 @@ it and you want to work in the field of big data, you should then consider
 learning the data table dialect as well. Right now, the most important thing 
 is consistency: all the dialects help you to achieve almost any aim you will 
 ever have in the context of data science. But things get very confusing if you
-mix different dialects in practive. Their functions are designed to work well 
+mix different dialects in practice. Their functions are designed to work well 
 with the other elements of the respective dialect environment, but things can
 become confusing if you mix data types and functions from, e.g., the tidyverse 
 and data.table dialect. If you want to read more about the controversies associated
@@ -356,12 +366,12 @@ with the different dialects you might start, e.g.,
 the opinion of the author regarding teachability).
 
 Transforming `data.frame`s and `tibble`s is one of the central tasks when 
-doing data science, and there are different approaches to it in R. Usually,
-taking your raw data and turinging it into a well formatted `data.frame` is
+doing data science, and there are different approaches to it in `R`. Usually,
+taking your raw data and turnging it into a well formatted `data.frame` is
 not straightforward and usually takes at least as much time as the final analysis
 of the data. Thus, it is one of the central course objectives to equip you with
 the tools to facilitate this often underrated and underestimated task. 
-But this will be the main subject of the sessions on data wrangling.
+But this will be the main subject of the sessions on *data wrangling*.
 
 # Digression: Matrices in R {#intro-matrix}
 
@@ -410,7 +420,7 @@ typeof(m_1)
 > As with factors and data frames this has to do with the particular class 
 attributes of matrices, which, however is *implicit*:^[This is another piece
 of evidence for the very confusing class concept and object-orientated style
-of R. See [this chapter](https://adv-r.hadley.nz/oo.html) for more details, 
+of `R`. See [this chapter](https://adv-r.hadley.nz/oo.html) for more details, 
 in case you are interested.]
 
 ```{r}
